refactor: move mapping logic to service layer